<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@drawable/img_inicio"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvTitulo"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:textColor="@color/font_white"
        android:gravity="center"
        android:textSize="22dp"
        android:text="Medita"/>

    <LinearLayout
        android:id="@+id/layoutButton"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:gravity="bottom"
        android:layout_weight="2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:gravity="center" >

            <ImageButton
                android:id="@+id/btnMinutoMeditacion"
                android:layout_width="@dimen/primary_button_size"
                android:layout_height="@dimen/primary_button_size"
                android:gravity="center"
                android:src="@drawable/ic_menu_home"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:clickable="true"
                android:onClick="onClick"
                android:background="@drawable/btn_primary" />

            <ImageButton
                android:id="@+id/btnMeditacion"
                android:layout_width="@dimen/primary_button_size"
                android:layout_height="@dimen/primary_button_size"
                android:layout_below="@+id/btnInicio"
                android:gravity="center"
                android:src="@drawable/ic_menu_meditation"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:clickable="true"
                android:onClick="onClick"
                android:background="@drawable/btn_primary" />

            <ImageButton
                android:id="@+id/btnConfiguracion"
                android:layout_width="@dimen/primary_button_size"
                android:layout_height="@dimen/primary_button_size"
                android:layout_below="@+id/btnMeditacion"
                android:gravity="center"
                android:src="@drawable/ic_menu_settings"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:clickable="true"
                android:onClick="onClick"
                android:background="@drawable/btn_primary" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutMeditacion"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_weight="1">

        <Button
            android:id="@+id/btnMeditacionMenteCuerpo"
            android:text="@string/meditacion_2"
            android:layout_width="320dp"
            android:layout_height="70dp"
            android:background="@drawable/btn_primary"
            android:layout_below="@+id/btnMinutoMeditacion"
            android:layout_marginTop="10dp"
            android:textAllCaps="false"
            android:textAlignment="textStart"
            android:gravity="start|center"
            android:textSize="18dp"
            android:textColor="@color/font_white"
            android:drawableLeft="@drawable/icono_celeste"
            android:drawablePadding="20dp"
            android:drawableRight="@drawable/ic_flecha"
            android:onClick="onClick"
            android:paddingLeft="15dp"
            android:paddingRight="15dp" />

        <Button
            android:id="@+id/btnMeditacionLiberaEstres"
            android:text="@string/meditacion_3"
            android:layout_width="320dp"
            android:layout_height="70dp"
            android:background="@drawable/btn_primary"
            android:layout_below="@+id/btnMeditacionMenteCuerpo"
            android:layout_marginTop="10dp"
            android:textAllCaps="false"
            android:textAlignment="textStart"
            android:gravity="start|center"
            android:textSize="18dp"
            android:textColor="@color/font_white"
            android:drawableLeft="@drawable/icono_verde"
            android:drawablePadding="20dp"
            android:drawableRight="@drawable/ic_flecha"
            android:onClick="onClick"
            android:paddingLeft="15dp"
            android:paddingRight="15dp" />

        <Button
            android:id="@+id/btnMeditacionInsomnio"
            android:text="@string/meditacion_4"
            android:layout_width="320dp"
            android:layout_height="70dp"
            android:background="@drawable/btn_primary"
            android:layout_below="@+id/btnMeditacionLiberaEstres"
            android:layout_marginTop="10dp"
            android:textAllCaps="false"
            android:textAlignment="textStart"
            android:gravity="start|center"
            android:textSize="18dp"
            android:textColor="@color/font_white"
            android:drawableLeft="@drawable/icono_naranja"
            android:drawablePadding="20dp"
            android:drawableRight="@drawable/ic_flecha"
            android:onClick="onClick"
            android:paddingLeft="15dp"
            android:paddingRight="15dp" />

    </LinearLayout>

</LinearLayout>
